--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+    background-color: #161616;
+    color: white;
+  }
+}
+
+body {
+  font-family: "Montserrat", sans-serif;
+}
